miniservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniservice
  labels:
    app: miniservice
spec:
  type: NodePort
  ports:
   - port: 8000
     nodePort: 31667
  selector:
   app: miniservice
